# refract

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cc
etc/: cflags.cmake  scanners.cmake
include/refract/: big_int.hh  sha256.hh  span_utils.hh
src/: CMakeLists.txt  big_int.cc  sha256.cc
src/arch/generic/: big_int_generic.cc  sha256_generic.cc
src/arch/x86_64/: aes_ni.c  sha256_ni.cc
src/internal/: big_int_impl.hh  mem_wipe.hh  sha256_impl.hh
tests/: CMakeLists.txt  test_mem_wipe.cc  test_sha256.cc  test_span_utils.cc
