# file(GLOB_RECURSE ALL_TEST_SOURCES CONFIGURE_DEPENDS "*.cc")

# add_executable(refract_tests ${ALL_TEST_SOURCES})
# target_link_libraries(refract_tests PRIVATE refract_static)
# target_include_directories(refract_tests PRIVATE ${PROJECT_SOURCE_DIR}/include)

# include(CTest)
# add_test(NAME refract_tests COMMAND refract_tests)